# pylite-orm

./: .gitignore  LICENSE  README.cn.md  README.md  pyproject.toml
.github/workflows/: publish.yml
src/lite_orm/: conn.py  expr.py  model.py
src/lite_orm/migr/: diff.py  generator.py  operations.py  runner.py
src/pylite_orm/: __init__.py  conn.py  model.py  query.py  session.py
src/pylite_orm/migr/: cli.py  diff.py  generator.py  inspector.py  operations.py  runner.py
