[project]
name = "lite-orm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "cai", email = "cai@heyeh.cn" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]

[project.scripts]
lite-migr = "lite_orm:cli"
