[project]
name = "pylite-orm"
version = "0.1.1"
description = "A lightweight SQLite ORM for Python"
readme = "README.md"
authors = [
    { name = "heyeh", email = "heyeh@heyeh.cn" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "pytest-benchmark>=5.2.3",
]

[project.scripts]
lite-migr = "pylite_orm:cli"
